Name:          cthulhu
Version:       0.1
Synopsis:      Regex combinators summoned by Cthulu himself.
License:       BSD3
License-file:  LICENSE
Author:        Jacob Stanley
maintainer:    Jacob Stanley <jacob@stanley.io>
Category:      Text
Build-type:    Simple
Cabal-version: >=1.2

Library
  -- Exposed-modules:     
  -- Build-depends:       
  -- Other-modules:       
  -- Build-tools:         
